Add design subsection

--- a/app/index.html
+++ b/app/index.html
@@ -118,8 +118,10 @@
                 </a>
               </div>
               <div class="story-type">
-                <img src="images/icon-design.png" alt="Design icon" />
-                <span>Design</span>
+                <a href="#design">
+                  <img src="images/icon-design.png" alt="Design icon" />
+                  <span>Design</span>
+                </a>
               </div>
             </div>
             <div class="story-types">
@@ -387,6 +389,40 @@
           <div class="brand-example">
             <a href="#">
               <img src="images/icon-branding.png" alt="Brand 4" />
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div id="subsection-design" class="subsection">
+      <div class="subsection-child" class="subsection-child">
+        <img class="sizzle-reel" src="/images/video-2.jpg" />
+        <h2>DESIGN CREATIVE SERVICES</h2>
+        <h1>Even a new logo should tell a story</h1>
+        <div class="white-line"></div>
+        <div class="content">Unlike some firms who push around colors and shapes without a plan, everything we do is with thought and purpose. After finding the best message for your brand, we bring your design elements and materials to life in ways that command attention. We believe even a new logo design can and should tell a story.</div>
+        <ul>
+          <li>Logos, identity, typography, brand colors</li>
+          <li>Digital, collateral, print and trade print</li>
+        </ul>
+        <img class="icon" src="images/icon-design.png" />
+        <div class="quote-blue">&quot;Design is the silent ambassador of your brand.&quot;</div>
+        <h2>PAUL RAND</h2>
+        <div id="design-callout">CLICK TO SEE THE WORK</div>
+        <div class="design-examples-row">
+          <div class="design-example">
+            <a href="#">
+              <img src="images/video-3.jpg" alt="Design 1" />
+            </a>
+          </div>
+          <div class="design-example">
+            <a href="#">
+              <img src="images/video-3.jpg" alt="Design 2" />
+            </a>
+          </div>
+          <div class="design-example">
+            <a href="#">
+              <img src="images/video-3.jpg" alt="Design 3" />
             </a>
           </div>
         </div>
