Add digital subsection

--- a/app/index.html
+++ b/app/index.html
@@ -126,8 +126,10 @@
             </div>
             <div class="story-types">
               <div class="story-type">
-                <img src="images/icon-digital.png" alt="Digital icon" />
-                <span>Digital</span>
+                <a href="#digital">
+                  <img src="images/icon-digital.png" alt="Digital icon" />
+                  <span>Digital</span>
+                </a>
               </div>
               <div class="story-type">
                 <img src="images/icon-social.png" alt="Social icon" />
@@ -423,6 +425,41 @@
           <div class="design-example">
             <a href="#">
               <img src="images/video-3.jpg" alt="Design 3" />
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div id="subsection-digital" class="subsection">
+      <div class="subsection-child" class="subsection-child">
+        <img id="digital-image" src="/images/video-2.jpg" />
+        <h2>DIGITAL CREATIVE SERVICES</h2>
+        <h1>Online audiences are hardened and have to be drawn in</h1>
+        <div class="white-line"></div>
+        <div class="content">People have responded to the growing number of digital and mobile ads by developing strategies for ignoring them. Our focus on creating stories that audiences care about delivers results that digital agencies can't match. In fact client research has shown our digital creative dramatically increases view through and click through rates with a better story.</div>
+        <ul>
+          <li>Website and web banner design and development</li>
+          <li>Pre-roll video</li>
+          <li>Video, social and content marketing</li>
+        </ul>
+        <img class="icon" src="images/icon-digital.png" />
+        <div class="quote-blue">&quot;Digital media now surpasses TV as the media where consumers spend the most time each day.&quot;</div>
+        <h2>eMARKETER.COM</h2>
+        <div id="digital-callout">CLICK TO SEE THE WORK</div>
+        <div class="digital-examples-row">
+          <div class="digital-example">
+            <a href="#">
+              <img src="images/video-3.jpg" alt="digital 1" />
+            </a>
+          </div>
+          <div class="digital-example">
+            <a href="#">
+              <img src="images/video-3.jpg" alt="digital 2" />
+            </a>
+          </div>
+          <div class="digital-example">
+            <a href="#">
+              <img src="images/video-3.jpg" alt="digital 3" />
             </a>
           </div>
         </div>
