Update About section for mobile to reduce text volume

--- a/app/index.html
+++ b/app/index.html
@@ -233,8 +233,9 @@
             <h2>ABOUT</h2>
             <h1>Creating stories that sell</h1>
             <div class="main">Companies and brands come to us to draw and move audiences. Our sole focus is helping brands uncover the story that makes them distinctive and then tell that story well. Clients have looked to us to launch new brands. To revive old or stagnating ones. To talk to people across the country and film around the world.</div>
-            <div class="sub">And they&#8217;ve relied on us to bring a room full of folded-arm executives to enthusiastic agreement on a messaging strategy. Achieving the business results our clients seek begins with showing them how to tell a better brand story.
-            </div>
+            <div class="sub">And they&#8217;ve relied on us to bring a room full of folded-arm executives to enthusiastic agreement on a messaging strategy. Achieving the business results our clients seek begins with showing them how to tell a better brand story.</div>
+            <div class="main-mobile">Companies and brands come to us to draw and move audiences. Our sole focus is helping brands uncover the story that makes them distinctive and then tell that story well.</div>
+            <div class="sub-mobile">Client&#8217;s have relied on us to bring a room full of folded-arm executives to enthusiastic agreement on a messaging strategy. Achieving the business results our clients seek begins with showing them how to tell a better brand story.</div>
             <div class="relative quote-line">&nbsp;<div class="white-line"></div></div>
             <div class="quote">
               <div class="quote-text quote-orange">&quot;90% of people watch videos to guide product decision making&quot;</div>
