Add story workshop detail subsection

--- a/app/index.html
+++ b/app/index.html
@@ -161,7 +161,7 @@
               <h1>Finding your story</h1>
               <div class="main">Most marketers have it backwards. They fixate on tactics rather than the message. And that&#8217;s why a lot of marketing fails. But if you get back to Why&#8212;your brand&#8217;s reason for being and the reason others should care&#8212;then things start to happen</div>
               <div class="main">You start to find your story. People start paying attention and they start telling others about you. We offer clients a unique process to uncover and find their unique and compelling story. We call it the Story Workshop.</div>
-              <a class="btn btn-default" href="#">STORY WORKSHOP DETAILS</a>
+              <a class="btn btn-default" href="#workshop-detail">STORY WORKSHOP DETAILS</a>
             </div>
             <div id="work-left">
               <div id="workshop-quote">
@@ -544,6 +544,52 @@
             <a href="#">
               <img src="images/video-3.jpg" alt="broadcast 4" />
             </a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div id="subsection-workshop-detail" class="subsection">
+      <div class="subsection-child" class="subsection-child">
+        <img id="workshop-image" src="/images/image-woman.jpg" />
+        <h2>STORY WORKSHOP</h2>
+        <h1>Most brands are telling a story, just not the right one.</h1>
+        <div class="white-line"></div>
+        <div class="content">Each Story Workshop includes:</div>
+        <ol>
+          <li>A brand review to assess
+            <ul>
+              <li>Your current story and how it can be improved</li>
+            </ul>
+          </li>
+          <li>A workbook of exercises to
+            <ul>
+              <li>Identify and define your brand personality and character</li>
+              <li>Reveal the challenges and obstacles to be resolved</li>
+              <li>Find the point of emotional leverage</li>
+              <li>Create a Storytelling Plot&copy; to define what your brand story is all about</li>
+              <li>Develop a Storytelling Message Map&copy; to guide how the story unfolds</li>
+            </ul>
+          </li>
+          <li>A framework bringing all marketing efforts around the core story
+            <ul>
+              <li>Draft and final versions of the brand Storytelling Plot&copy; and Storytelling Message Map&copy;</li>
+            </ul>
+          </li>
+        </ol>
+        <img class="icon" src="images/icon-content.png" />
+        <div class="quote-blue">&quot;We found a message everyone could get behind. More importantly, we found a good story. We're looking to bring their workshop to other parts of the company.&quot;</div>
+        <h2>LESLIE RUSSEL, VP COMCAST WHOLESALE</h2>
+        <div id="workshop-callout">SCHEDULE YOUR FULL OR HALF-DAY WORKSHOP</div>
+        <div id="contact-section">
+          <div id="contact-fields">
+            <input type="text" placeholder="FIRST NAME" />
+            <input type="text" placeholder="LAST NAME" />
+            <input type="text" placeholder="COMPANY" />
+            <input type="text" placeholder="E-MAIL ADDRESS" />
+            <input type="text" placeholder="PHONE" />
+          </div>
+          <div id="contact-info">
+            <div>We will contact you to discuss your needs, share additional details about the workshop and provide pricing</div>
           </div>
         </div>
       </div>
