Clean up subsection styles

--- a/app/index.html
+++ b/app/index.html
@@ -301,8 +301,8 @@
         <img class="icon" src="images/icon-music.png" />
         <div class="quote-blue">&quot;Without music, a brilliant campaign can go unnoticed. With music, a subpar creative production can go viral&quot;</div>
         <h2>ERIC SHEINKOP</h2>
-        <div class=".btn">GO TO OUR MUSIC SITE</div>
-        <div>CLICK ON A CASSETTE TO LISTEN</div>
+        <div class="btn">GO TO OUR MUSIC SITE</div>
+        <div class="callout">CLICK ON A CASSETTE TO LISTEN</div>
         <img class="music-cassette" src="/images/music-cassettes.png" />
       </div>
     </div>
@@ -322,41 +322,41 @@
         <img class="icon" src="images/icon-video.png" />
         <div class="quote-blue">&quot;Videos are shared 12x more than links and text posts combined.&quot;</div>
         <h2>PINTEREST</h2>
-        <div id="video-callout">CLICK TO WATCH THE VIDEOS</div>
-        <div class="video-examples-row">
-          <div class="video-example">
+        <div id="video-callout" class="callout">CLICK TO WATCH THE VIDEOS</div>
+        <div class="video-examples-row examples-row">
+          <div class="video-example example">
             <a href="#">
               <img src="images/video-1.jpg" alt="Video" />
             </a>
           </div>
-          <div class="video-example">
+          <div class="video-example example">
             <a href="#">
               <img src="images/video-1.jpg" alt="Branding" />
             </a>
           </div>
-          <div class="video-example">
+          <div class="video-example example">
             <a href="#">
               <img src="images/video-1.jpg" alt="Music" />
             </a>
           </div>
-          <div class="video-example">
+          <div class="video-example example">
             <a href="#">
               <img src="images/video-1.jpg" alt="Design" />
             </a>
           </div>
         </div>
-        <div class="video-examples-row">
-          <div class="video-example">
+        <div class="video-examples-row examples-row">
+          <div class="video-example example">
             <a href="#">
               <img src="images/video-1.jpg" alt="Digital" />
             </a>
           </div>
-          <div class="video-example">
+          <div class="video-example example">
             <a href="#">
               <img src="images/video-1.jpg" alt="Social" />
             </a>
           </div>
-          <div class="video-example">
+          <div class="video-example example">
             <a href="#">
               <img src="images/video-1.jpg" alt="Content" />
             </a>
@@ -378,23 +378,23 @@
         <img class="icon" src="images/icon-branding.png" />
         <div class="quote-blue">&quot;Emotion is the primary reason consumers prefer brand name products.&quot;</div>
         <h2>PSYCHOLOGY TODAY</h2>
-        <div class="brand-examples-row">
-          <div class="brand-example">
+        <div class="brand-examples-row examples-row">
+          <div class="brand-example example">
             <a href="#">
               <img src="images/icon-branding.png" alt="Brand 1" />
             </a>
           </div>
-          <div class="brand-example">
+          <div class="brand-example example">
             <a href="#">
               <img src="images/icon-branding.png" alt="Brand 2" />
             </a>
           </div>
-          <div class="brand-example">
+          <div class="brand-example example">
             <a href="#">
               <img src="images/icon-branding.png" alt="Brand 3" />
             </a>
           </div>
-          <div class="brand-example">
+          <div class="brand-example example">
             <a href="#">
               <img src="images/icon-branding.png" alt="Brand 4" />
             </a>
@@ -416,19 +416,19 @@
         <img class="icon" src="images/icon-design.png" />
         <div class="quote-blue">&quot;Design is the silent ambassador of your brand.&quot;</div>
         <h2>PAUL RAND</h2>
-        <div id="design-callout">CLICK TO SEE THE WORK</div>
-        <div class="design-examples-row">
-          <div class="design-example">
+        <div id="design-callout" class="callout">CLICK TO SEE THE WORK</div>
+        <div class="design-examples-row examples-row">
+          <div class="design-example example">
             <a href="#">
               <img src="images/video-3.jpg" alt="Design 1" />
             </a>
           </div>
-          <div class="design-example">
+          <div class="design-example example">
             <a href="#">
               <img src="images/video-3.jpg" alt="Design 2" />
             </a>
           </div>
-          <div class="design-example">
+          <div class="design-example example">
             <a href="#">
               <img src="images/video-3.jpg" alt="Design 3" />
             </a>
@@ -451,19 +451,19 @@
         <img class="icon" src="images/icon-digital.png" />
         <div class="quote-blue">&quot;Digital media now surpasses TV as the media where consumers spend the most time each day.&quot;</div>
         <h2>eMARKETER.COM</h2>
-        <div id="digital-callout">CLICK TO SEE THE WORK</div>
-        <div class="digital-examples-row">
-          <div class="digital-example">
+        <div id="digital-callout" class="callout">CLICK TO SEE THE WORK</div>
+        <div class="digital-examples-row examples-row">
+          <div class="digital-example example">
             <a href="#">
               <img src="images/video-3.jpg" alt="digital 1" />
             </a>
           </div>
-          <div class="digital-example">
+          <div class="digital-example example">
             <a href="#">
               <img src="images/video-3.jpg" alt="digital 2" />
             </a>
           </div>
-          <div class="digital-example">
+          <div class="digital-example example">
             <a href="#">
               <img src="images/video-3.jpg" alt="digital 3" />
             </a>
@@ -523,24 +523,24 @@
         </ul>
         <img class="icon" src="images/icon-broadcast.png" />
         <div class="quote-blue">65% of consumers say TV ads influence their buying decisions</div>
-        <div id="broadcast-callout">SEE OUR BROADCAST WORK</div>
-        <div class="broadcast-examples-row">
-          <div class="broadcast-example">
+        <div id="broadcast-callout" class="callout">SEE OUR BROADCAST WORK</div>
+        <div class="broadcast-examples-row examples-row">
+          <div class="broadcast-example example">
             <a href="#">
               <img src="images/video-3.jpg" alt="broadcast 1" />
             </a>
           </div>
-          <div class="broadcast-example">
+          <div class="broadcast-example example">
             <a href="#">
               <img src="images/video-3.jpg" alt="broadcast 2" />
             </a>
           </div>
-          <div class="broadcast-example">
+          <div class="broadcast-example example">
             <a href="#">
               <img src="images/video-3.jpg" alt="broadcast 3" />
             </a>
           </div>
-          <div class="broadcast-example">
+          <div class="broadcast-example example">
             <a href="#">
               <img src="images/video-3.jpg" alt="broadcast 4" />
             </a>
@@ -579,7 +579,7 @@
         <img class="icon" src="images/icon-content.png" />
         <div class="quote-blue">&quot;We found a message everyone could get behind. More importantly, we found a good story. We're looking to bring their workshop to other parts of the company.&quot;</div>
         <h2>LESLIE RUSSEL, VP COMCAST WHOLESALE</h2>
-        <div id="workshop-callout">SCHEDULE YOUR FULL OR HALF-DAY WORKSHOP</div>
+        <div id="workshop-callout" class="callout">SCHEDULE YOUR FULL OR HALF-DAY WORKSHOP</div>
         <div id="contact-section">
           <div id="contact-fields">
             <input type="text" placeholder="FIRST NAME" />
