Mobile Approach section complete

--- a/app/index.html
+++ b/app/index.html
@@ -217,6 +217,10 @@
               <h1>Stories are better than ads</h1>
               <div class="main">There&#8217;s a reason people tune out marketing messages. They&#8217;re flooded with them. Ads interrupt stories we care about. But stories are different. A well-told story reveals truth and stays with us. It stirs our emotions and can lead us to action. Telling stories is how we naturally relate to each other. We grow brands by turning marketing messages into stories that people want to see and hear.
               </div>
+              <div class="main-mobile">Ads interrupt stories we care about, but stories are different. A well-told story reveals truth and stays with us. Telling stories is how we naturally relate to each other. At Narrator, we grow brands by turning marketing messages into stories that people want to see and hear.
+              </div>
+            </div>
+            <div id="approach-flex-wrapper">
               <div id="approach-quote">
                 <div class="relative quote-line">&nbsp;<div class="white-line"></div></div>
                 <div class="quote">
@@ -225,9 +229,9 @@
                 </div>
                 <div class="relative quote-line">&nbsp;<div class="white-line"></div></div>
               </div>
-            </div>
-            <div id="approach-reel">
-              <img src="images/video-1.jpg" alt="Demo video" />
+              <div id="approach-reel">
+                <img src="images/video-1.jpg" alt="Demo video" />
+              </div>
             </div>
           </div>
         </div>
