--- a/app/index.html
+++ b/app/index.html
@@ -35,7 +35,33 @@
       <![endif]-->
       <div id="section-header">
         <img class="narrator-logo-full" src="images/logo-full.png" alt="Narrator group logo" />
-        <a href="#campfire"><img class="narrator-logo-small" src="images/logo-n.png" alt="Narrator group logo" /></a>
+        <a href="#campfire">
+          <img class="narrator-logo-small" src="images/logo-n.png" alt="Narrator group logo" />
+        </a>
+        <div id="mobile-menu">
+          <button type="button" class="open-menu" id="btn-open-menu">
+          <div class="icon-bar"></div>
+          <div class="icon-bar"></div>
+          <div class="icon-bar"></div>
+          </button>
+          <div id="mobile-menu-fixed" class="mobile-menu-fixed-close">
+            <div class="mobile-menu">
+              <button class="btn-close" id="btn-close-menu"><i class="fa fa-close"></i></button>
+              <div class="mobile-nav">
+                <ul>
+                  <li><a href="#contact">CONTACT</a></li>
+                  <li><a href="#story">STORY</a></li>
+                  <li><a href="#workshop">WORKSHOP</a></li>
+                  <li><a href="#work">WORK</a></li>
+                  <li><a href="#approach">APPROACH</a></li>
+                  <li><a href="#about">ABOUT</a></li>
+                  <li><a href="#campfire">CAMPFIRE</a></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div id="mouse-shield"></div>
+        </div>
       </div>
       <div class="moon-wrapper">
         <div class="moon">
@@ -610,7 +636,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/plugins/animation.gsap.js"></script>
     <!-- build:js scripts/vendor.js -->
     <!-- bower:js -->
-    <script src="/bower_components/jquery/dist/jquery.min.js"></script>
+    <script src="/bower_components/jquery/dist/jquery.js"></script>
+    <script src="/bower_components/jquery-touchswipe/jquery.touchSwipe.js"></script>
+    <script src="/bower_components/requirejs/require.js"></script>
     <script src="/bower_components/ScrollMagic/scrollmagic/uncompressed/ScrollMagic.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
