Style work section

--- a/app/index.html
+++ b/app/index.html
@@ -181,12 +181,12 @@
       <div id="section-work" class="section">
         <div id="section-work-child" class="section-child">
           <div id="section-work-flex" class="content-centered">
-            <div id="work-header">
-              <div id="work-title">
+            <div class="work-header">
+              <div class="work-title">
                 <h2>WORK</h2>
                 <h1>Stories we&#8217;ve developed and recently told</h1>
               </div>
-              <div id="work-quote">
+              <div class="work-quote">
                 <div class="relative quote-line">&nbsp;<div class="white-line"></div></div>
                 <div class="quote">
                   <div class="quote-text quote-yellow">&quot;It&#8217;s indisputable that the best way to persuade someone is by telling a compelling story.&quot;</div>
@@ -195,15 +195,41 @@
                 <div class="relative quote-line">&nbsp;<div class="white-line"></div></div>
               </div>
             </div>
-            <div id="work-recent-stories">
-              <div id="work-story-1"><img src="images/video-1.jpg" alt="Demo video" /></div>
-              <div id="work-stories-right">
-                <div id="work-story-2"><img src="images/video-2.jpg" alt="Demo video" /></div>
-                <div id="work-story-3"><img src="images/video-3.jpg" alt="Demo video" /></div>
+            <div class="work-recent-stories">
+              <div class="work-story-1"><img src="images/video-1.jpg" alt="Demo video" /></div>
+              <div class="work-stories-right">
+                <div class="work-story-2"><img src="images/video-2.jpg" alt="Demo video" /></div>
+                <div class="work-story-3"><img src="images/video-3.jpg" alt="Demo video" /></div>
               </div>
             </div>
-            <div id="work-btn-wrapper">
+            <div class="work-btn-wrapper">
               <a class="btn btn-default" href="#">SEE MORE</a>
+            </div>
+          </div>
+          <div id="section-work-flex-mobile" class="content-centered">
+            <div class="work-header">
+              <div class="work-title">
+                <h2>WORK</h2>
+                <h1>Stories we&#8217;ve recently told</h1>
+              </div>
+            </div>
+            <div class="work-recent-stories">
+              <div class="work-story-1"><img src="images/video-1.jpg" alt="Demo video" /></div>
+              <div class="work-stories">
+                <div class="work-story-2"><img src="images/video-2.jpg" alt="Demo video" /></div>
+                <div class="work-story-3"><img src="images/video-3.jpg" alt="Demo video" /></div>
+              </div>
+            </div>
+            <div class="work-btn-wrapper">
+              <a class="btn btn-default" href="#">SEE MORE</a>
+            </div>
+            <div class="work-quote">
+              <div class="relative quote-line">&nbsp;<div class="white-line"></div></div>
+              <div class="quote">
+                <div class="quote-text quote-yellow">&quot;It&#8217;s indisputable that the best way to persuade someone is by telling a compelling story.&quot;</div>
+                <div class="quote-attrib">AD WEEK</div>
+              </div>
+              <div class="relative quote-line">&nbsp;<div class="white-line"></div></div>
             </div>
           </div>
         </div>
@@ -311,7 +337,7 @@
           <li>Mnemoics and distinctive audio signatures</li>
           <li>Hold music for customer support centers</li>
         </ul>
-        <div class="quote-blue">&quot;Research shows music dramatially boosts memory&quot;</div>
+        <div class="quote-blue">&quot;Research shows mussectionic dramatially boosts memory&quot;</div>
         <h2>BUSINESS INSIDER</h2>
         <img class="icon" src="images/icon-music.png" />
         <div class="quote-blue">&quot;Without music, a brilliant campaign can go unnoticed. With music, a subpar creative production can go viral&quot;</div>
