Fix work and workshop to work in both orientations on mobile

--- a/app/index.html
+++ b/app/index.html
@@ -182,15 +182,15 @@
       <div id="section-workshop" class="section">
         <div id="section-workshop-child" class="section-child">
           <div id="section-workshop-flex" class="content-centered">
-            <div id="work-right">
+            <div class="work-right">
               <h2>STRATEGIC SERVICES</h2>
               <h1>Finding your story</h1>
               <div class="main">Most marketers have it backwards. They fixate on tactics rather than the message. And that&#8217;s why a lot of marketing fails. But if you get back to Why&#8212;your brand&#8217;s reason for being and the reason others should care&#8212;then things start to happen</div>
               <div class="main">You start to find your story. People start paying attention and they start telling others about you. We offer clients a unique process to uncover and find their unique and compelling story. We call it the Story Workshop.</div>
               <a class="btn btn-default" href="#workshop-detail">STORY WORKSHOP DETAILS</a>
             </div>
-            <div id="work-left">
-              <div id="workshop-quote">
+            <div class="work-left">
+              <div class="workshop-quote">
                 <div class="relative quote-line">&nbsp;<div class="white-line"></div></div>
                 <div class="quote">
                   <div class="quote-text quote-blue">&quot;Real cleverness must stem from knowledge of a product.&quot;</div>
@@ -200,6 +200,28 @@
               </div>
               <img src="images/image-woman.jpg" alt="Woman" />
             </div>
+          </div>
+          <div id="section-workshop-flex-mobile" class="content-centered">
+            <div class="workshop-1">
+              <h2>STRATEGIC SERVICES</h2>
+              <h1>Finding your story</h1>
+              <div class="main">Most marketers have it backwards. They fixate on tactics rather than the message. But if you get back to Why&#8212;your brand&#8217;s reason for being and the reason others should care&#8212;then things start to happen.</div>
+              <div class="main">We offer clients a unique process to uncover and find their unique and compelling story. We call it the Story Workshop.</div>
+              <a class="btn btn-default" href="#workshop-detail">STORY WORKSHOP DETAILS</a>
+            </div>
+
+            <div class="workshop-2">
+              <div class="workshop-img-wrapper">
+                <img src="images/image-woman.jpg" alt="Woman" />
+              </div>
+              <div class="workshop-quote">
+                <div class="quote">
+                  <div class="quote-text quote-blue">&quot;Real cleverness must stem from knowledge of a product.&quot;</div>
+                  <div class="quote-attrib">BILL BERNBACH</div>
+                </div>
+              </div>
+            </div>
+            <div style="clear: both;"></div>
           </div>
         </div>
       </div>
@@ -679,7 +701,7 @@
     <!-- bower:js -->
     <script src="/bower_components/jquery/dist/jquery.js"></script>
     <script src="/bower_components/jquery-touchswipe/jquery.touchSwipe.js"></script>
-    <script src="/bower_components/requirejs/require.js"></script>
+    <!--<script src="/bower_components/requirejs/require.js"></script>-->
     <script src="/bower_components/ScrollMagic/scrollmagic/uncompressed/ScrollMagic.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
