--- a/app/index.html
+++ b/app/index.html
@@ -119,7 +119,7 @@
       <div id="section-story-type" class="section">
         <div id="section-story-type-child" class="section-child">
           <div id="section-story-type-flex" class="content-centered">
-            <div id="section-story-type-header">
+            <div class="section-story-type-header">
               <h1>Telling your story well</h1>
               <div class="main">Even the best strategy for the greatest product or service quickly runs adrift without the right creative partner. The right creative partner is collaborative&#8212;and knows how to move audiences to act. Whether your story is best told as a video, logo, web banner, website, or brand music, we work with you to create something memorable and true.</div>
             </div>
