First pass at contact section for mobile

--- a/app/index.html
+++ b/app/index.html
@@ -103,13 +103,13 @@
                 <input type="text" placeholder="E-MAIL ADDRESS" />
                 <input type="text" placeholder="SUBJECT" />
                 <input type="text" placeholder="MESSAGE" />
-                <div class="line"></div>
+                <div id="line2" class="line"></div>
                 <a class="btn btn-default" href="#">SEND</a>
               </div>
               <div id="contact-info">
                 <div>The Narrator Group</div>
-                <div>Phone 720.295.8680</div>
-                <div><a href="#">storyteller@narratorgroup.com</a></div>
+                <div>720.295.8680</div>
+                <div><a href="mailto:storyteller@narratorgroup.com">Email</a></div>
               </div>
             </div>
           </div>
