Add several tweaks to story type section

--- a/app/index.html
+++ b/app/index.html
@@ -121,7 +121,7 @@
           <div id="section-story-type-flex" class="content-centered">
             <div class="section-story-type-header">
               <h1>Telling your story well</h1>
-              <div class="main">Even the best strategy for the greatest product or service quickly runs adrift without the right creative partner. The right creative partner is collaborative&#8212;and knows how to move audiences to act. Whether your story is best told as a video, logo, web banner, website, or brand music, we work with you to create something memorable and true.</div>
+              <div class="main">Even the best strategy for the greatest product or service quickly runs adrift without the right creative partner. <span class="story-desktop-copy">The right creative partner is collaborative&#8212;and knows how to move audiences to act. Whether your story is best told as a video, logo, web banner, website, or brand music, we work with you to create something memorable and true.</span><span class="story-mobile-copy">We work with a variety of mediums to make your story memorable and true.</span></div>
             </div>
             <div class="story-types">
               <div class="story-type">
