Make phone link clickable on phone

--- a/app/index.html
+++ b/app/index.html
@@ -108,7 +108,7 @@
               </div>
               <div id="contact-info">
                 <div>The Narrator Group</div>
-                <div>720.295.8680</div>
+                <div><a href="tel:+1-720-295-8680">720.295.8680</a></div>
                 <div><a href="mailto:storyteller@narratorgroup.com">Email</a></div>
               </div>
             </div>
