--- a/app/index.html
+++ b/app/index.html
@@ -82,7 +82,7 @@
           </div>
         </div>
       </div>
-      <div id="contact"></div>
+      <div id="contact" class="touchswipe"></div>
       <div id="section-contact" class="section">
         <div id="section-contact-child" class="section-child">
           <div id="section-contact-flex" class="content-centered">
@@ -115,7 +115,7 @@
           </div>
         </div>
       </div>
-      <div id="story"></div>
+      <div id="story" class="touchswipe"></div>
       <div id="section-story-type" class="section">
         <div id="section-story-type-child" class="section-child">
           <div id="section-story-type-flex" class="content-centered">
@@ -178,7 +178,7 @@
           </div>
         </div>
       </div>
-      <div id="workshop"></div>
+      <div id="workshop" class="touchswipe"></div>
       <div id="section-workshop" class="section">
         <div id="section-workshop-child" class="section-child">
           <div id="section-workshop-flex" class="content-centered">
@@ -225,7 +225,7 @@
           </div>
         </div>
       </div>
-      <div id="work"></div>
+      <div id="work" class="touchswipe"></div>
       <div id="section-work" class="section">
         <div id="section-work-child" class="section-child">
           <div id="section-work-flex" class="content-centered">
@@ -282,7 +282,7 @@
           </div>
         </div>
       </div>
-      <div id="approach"></div>
+      <div id="approach" class="touchswipe"></div>
       <div id="section-approach" class="section">
         <div id="section-approach-child" class="section-child">
           <div id="section-approach-flex" class="content-centered">
@@ -321,7 +321,7 @@
           </div>
         </div>
       </div>
-      <div id="about"></div>
+      <div id="about" class="touchswipe"></div>
       <div id="section-about" class="section">
         <div id="section-about-child" class="section-child">
           <div id="section-about-flex" class="content-centered">
@@ -340,7 +340,7 @@
           </div>
         </div>
       </div>
-      <div id="campfire"></div>
+      <div id="campfire" class="touchswipe"></div>
       <div id="section-campfire" class="section">
         <div id="section-campfire-child" class="section-child">
           <div id="section-campfire-flex" class="content-centered">
