--- a/app/index.html
+++ b/app/index.html
@@ -33,36 +33,6 @@
       <!--[if lt IE 10]>
       <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
       <![endif]-->
-      <div id="section-header">
-        <img class="narrator-logo-full" src="images/logo-full.png" alt="Narrator group logo" />
-        <a href="#campfire">
-          <img class="narrator-logo-small" src="images/logo-n.png" alt="Narrator group logo" />
-        </a>
-        <div id="mobile-menu">
-          <button type="button" class="open-menu" id="btn-open-menu">
-          <div class="icon-bar"></div>
-          <div class="icon-bar"></div>
-          <div class="icon-bar"></div>
-          </button>
-          <div id="mobile-menu-fixed" class="mobile-menu-fixed-close">
-            <div class="mobile-menu">
-              <button class="btn-close" id="btn-close-menu"><i class="fa fa-close"></i></button>
-              <div class="mobile-nav">
-                <ul>
-                  <li><a href="#contact">CONTACT</a></li>
-                  <li><a href="#story">STORY</a></li>
-                  <li><a href="#workshop">WORKSHOP</a></li>
-                  <li><a href="#work">WORK</a></li>
-                  <li><a href="#approach">APPROACH</a></li>
-                  <li><a href="#about">ABOUT</a></li>
-                  <li><a href="#campfire">CAMPFIRE</a></li>
-                </ul>
-              </div>
-            </div>
-          </div>
-          <div id="mouse-shield"></div>
-        </div>
-      </div>
       <div class="moon-wrapper">
         <div class="moon">
         </div>
@@ -681,6 +651,36 @@
             <div>We will contact you to discuss your needs, share additional details about the workshop and provide pricing</div>
           </div>
         </div>
+      </div>
+    </div>
+    <div id="section-header">
+      <img class="narrator-logo-full" src="images/logo-full.png" alt="Narrator group logo" />
+      <a href="#campfire">
+        <img class="narrator-logo-small" src="images/logo-n.png" alt="Narrator group logo" />
+      </a>
+      <div id="mobile-menu">
+        <button type="button" class="open-menu" id="btn-open-menu">
+          <div class="icon-bar"></div>
+          <div class="icon-bar"></div>
+          <div class="icon-bar"></div>
+        </button>
+        <div class="mobile-menu-fixed">
+          <div class="mobile-menu">
+            <button class="btn-close" id="btn-close-menu"><i class="fa fa-close"></i></button>
+            <div class="mobile-nav">
+              <ul>
+                <li><a href="#contact">CONTACT</a></li>
+                <li><a href="#story">STORY</a></li>
+                <li><a href="#workshop">WORKSHOP</a></li>
+                <li><a href="#work">WORK</a></li>
+                <li><a href="#approach">APPROACH</a></li>
+                <li><a href="#about">ABOUT</a></li>
+                <li><a href="#campfire">CAMPFIRE</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div id="mouse-shield"></div>
       </div>
     </div>
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
