Update to menu to get to work properly on landscape

--- a/app/index.html
+++ b/app/index.html
@@ -668,14 +668,16 @@
           <div class="mobile-menu">
             <button class="btn-close" id="btn-close-menu"><i class="fa fa-close"></i></button>
             <div class="mobile-nav">
-              <ul>
-                <li><a href="#contact">CONTACT</a></li>
-                <li><a href="#story">STORY</a></li>
-                <li><a href="#workshop">WORKSHOP</a></li>
-                <li><a href="#work">WORK</a></li>
-                <li><a href="#approach">APPROACH</a></li>
-                <li><a href="#about">ABOUT</a></li>
+              <ul class="section-1">
                 <li><a href="#campfire">CAMPFIRE</a></li>
+                <li><a href="#about">ABOUT</a></li>
+                <li><a href="#approach">APPROACH</a></li>
+                <li><a href="#work">WORK</a></li>
+              </ul>
+              <ul class="section-2">
+                <li><a href="#workshop">WORKSHOP</a></li>
+                <li><a href="#story">STORY</a></li>
+                <li><a href="#contact">CONTACT</a></li>
               </ul>
             </div>
           </div>
