--- a/app/index.html
+++ b/app/index.html
@@ -40,7 +40,7 @@
       <div class="campfire-video-container">
         <div class="campfire-video-offset">
           <script>function errHandler(e) {window.campfireLoadError = e; console.log(window.campfireLoadError); if (window.startup) startup(true);}</script>
-          <video id="campfire-video" autoplay="true" loop="true" muted="true" onerror="errHandler(event)">
+          <video id="campfire-video" volume="0.2" autoplay="true" loop="true" onerror="errHandler(event)">
             <source src="video/campfire-cropped.mp4" type="video/mp4" onerror="errHandler(event)">
             <h1>For the best experience, please view this site in a modern browser.</h1>
           </video>
